--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/SRILAKSHMI576/Notes_App#readme",
   "dependencies": {
+    "chalk": "^3.0.0",
     "validator": "^13.0.0"
   }
 }
